--- a/todo.org
+++ b/todo.org
@@ -40,6 +40,15 @@
   It might be good to actually just leave it how it is. Probably not.
 
 
+* TODO Smart Distance Function
+  Only Penalize velocity if it is not in the direction towards
+  the goal state. So do a dot product.
+
+* <2021-03-18 Thu> Update
+  Kinematic model planner is working. Dynamic model planner is not working. Visualizer is working.
+  It is cool.
+
+
 * More information required:
   Ask Norris about whether to use ros 1 or 2.
 
